# DNN-Accelerator

./: LICENSE  README-CN.md  README.md
01_quantization/: .gitignore  README.md  export.py  model.py  train.py
02_inference/: .gitignore  CMakeLists.txt  README.md
02_inference/cmake/fetch/: fmt.cmake  nlohmann.cmake  spdlog.cmake  stb.cmake
02_inference/include/: CMakeLists.txt  model.hpp  operator.hpp  operator_factory.hpp  tensor.hpp
02_inference/include/operators/: conv2d.hpp  dequant_stub.hpp  linear.hpp  maxpool2d.hpp  padding.hpp  quant_stub.hpp  relu.hpp
02_inference/tutorials/: CMakeLists.txt  demo.cc
03_hardware/: .gitignore  README.md
03_hardware/axi_dma_ctrl/: README.md  axi_dma_read_ctrl.sv  axi_dma_write_ctrl.sv  tb_axi_dma_read_ctrl.sv  tb_axi_dma_write_ctrl.sv
03_hardware/axi_ir/: README.md
03_hardware/systolic_array/: README.md  systolic_array.sv  systolic_array_tb.sv
04_software/: .gitignore  README.md
04_software/driver/: Makefile
04_software/driver/include/: accel.h  accel_config.h  accel_types.h
04_software/driver/src/: accel.c  accel_config.c
04_software/driver/test/: accel_test.h  test_accel.c  test_config.c
04_software/hal/: Makefile
04_software/hal/include/: hal.h  hal_base.h  hal_config.h  hal_io.h  hal_mem.h
04_software/hal/src/: hal_base.c  (+3 more)
04_software/runtime/: CMakeLists.txt
04_software/runtime/cmake/: accel_driver.cmake
04_software/runtime/include/: CMakeLists.txt  accel.hpp
04_software/runtime/include/accel/: buffer.hpp  runtime.hpp  types.hpp
04_software/runtime/tutorials/: CMakeLists.txt  demo.cc
(+4 files in other folders)
